-
Bug
-
Resolution: Done
-
P4: Low
-
5.14.0
-
92eea633491ce8138c5caceb904ad26c1eb91044 (qt/qtbase/5.15)
It is not currently possible to pass empty arguments to a process through execute(QString) / start(QString overload.
| For Gerrit Dashboard: QTBUG-80640 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 289686,8 | Obsolete command-string parsing QProcess::start/execute overloads | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |